# microsoft-blog-reader

./: .gitignore  AGENTS.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: deploy.yml  fetch-rss.yml  lint.yml
data/: articles.json  feeds.db
docs/spec/: README.md  api.md  architecture.md  data-model.md  requirements.md
scripts/: fetch_rss.py
site/: astro.config.mjs  biome.json  package-lock.json  package.json
site/src/components/: ArticleCard.astro
site/src/layouts/: Layout.astro
site/src/lib/: blogs.ts  db.ts
site/src/pages/: feed.xml.ts  index.astro
